--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,31 @@
-#Xcode
-
+# Folder config
 .DS_Store
 
-#personal settings
-
+# Personal settings
 *.pbxuser
-
 !default.pbxuser
-
 *.mode1v3
-
 !default.mode1v3
-
 *.mode2v3
-
 !default.mode2v3
-
-#xcode state
-
-*.perspectivev3
-
-!default.perspectivev3
-
-*.xcworkspace
-
-!default.xcworkspace
-
 xcuserdata
-
+ 
+# XCode state
+*.perspectivev3
+!default.perspectivev3
+*.xcworkspace
+!default.xcworkspace
 *.moved-aside
-
 DerivedData
-
 .idea/
-
 *.orig
+  
+# Carthage
+Carthage/Build/
+Carthage/Checkouts
 *.bcsymbolmap
-*.dSYM*
-GIGPassbook/Carthage/Checkouts
-*Carthage/Checkouts*
+*.framework.dSYM*
+
+# Localio
+Locfile
+.localio.yml
