--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,20 @@
+osx_image: xcode8.3
 language: objective-c
-osx_image: xcode8.2
 env:
   global:
   - FRAMEWORK_NAME=GIGPassbook
+  - PROJECT=GIGPassbook
+  - SCHEME=GIGPassbook
+  - OS=10.3
+  - DEVICE="iPhone 7"
+cache:
+  directories:
+  - Carthage
 before_script:
-  - carthage version
-  - carthage bootstrap --platform iOS
+  - open -b com.apple.iphonesimulator
+  - carthage bootstrap --cache-builds --platform iOS
 script:
-  - set -o pipefail && xcodebuild -project GIGPassbook.xcodeproj -scheme GIGPassbook -sdk iphonesimulator -destination "platform=iOS Simulator,OS=10.1,name=iPhone 6" test | xcpretty
+  - set -o pipefail && xcodebuild -project $PROJECT.xcodeproj -scheme $SCHEME -sdk iphonesimulator -destination "platform=iOS Simulator,OS=$OS,name=$DEVICE" test | xcpretty
 before_deploy:
   - carthage build --no-skip-current
   - carthage archive $FRAMEWORK_NAME
